--- a/chat/package.json
+++ b/chat/package.json
@@ -10,35 +10,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.0",
-    "@angular/common": "^16.2.0",
-    "@angular/compiler": "^16.2.0",
-    "@angular/core": "^16.2.0",
-    "@angular/forms": "^16.2.0",
-    "@angular/platform-browser": "^16.2.0",
-    "@angular/platform-browser-dynamic": "^16.2.0",
-    "@angular/router": "^16.2.0",
+    "@angular/animations": "^18.0.0",
+    "@angular/common": "^18.0.0",
+    "@angular/compiler": "^18.0.0",
+    "@angular/core": "^18.0.0",
+    "@angular/forms": "^18.0.0",
+    "@angular/platform-browser": "^18.0.0",
+    "@angular/platform-browser-dynamic": "^18.0.0",
+    "@angular/router": "^18.0.0",
     "@ctrl/ngx-emoji-mart": "^9.2.0",
     "@stomp/stompjs": "^7.1.1",
-    "rxjs": "~7.8.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^18.0.2",
+    "rxjs": "~7.8.1",
     "sockjs-client": "^1.6.1",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "tslib": "^2.6.2",
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.16",
-    "@angular/cli": "^16.2.16",
-    "@angular/compiler-cli": "^16.2.0",
-    "@types/jasmine": "~4.3.0",
-    "autoprefixer": "^10.4.21",
-    "jasmine-core": "~4.6.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "postcss": "^8.5.3",
+    "@angular-devkit/build-angular": "^18.0.0",
+    "@angular/cli": "^18.2.19",
+    "@angular/compiler-cli": "^18.0.0",
     "tailwindcss": "^3.4.17",
-    "typescript": "~5.1.3"
+    "typescript": "~5.4.5"
   }
 }
